posix: Clean up get_max_fds implementation.

* src/posix-io.c (get_max_fds): Return type is int.
Ifdef-out TRACE.
Remove call to sysconf.
Use long for R and POS.
Use aligned buffer for struct linux_dirent64.

--

GnuPG-bug-id: 7694
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>